--- a/bandsox/static/vm_details.html
+++ b/bandsox/static/vm_details.html
@@ -391,13 +391,36 @@
                 row.className = 'file-row group hover:bg-zinc-900/50 transition-colors';
 
                 const isDir = file.is_dir;
-                const icon = isDir
-                    ? `<svg class="file-icon text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                let icon;
+                if (isDir) {
+                    icon = `<svg class="file-icon text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"></path>
-                    </svg>`
-                    : `<svg class="file-icon text-zinc-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    </svg>`;
+                } else if (/\.(md|markdown|mdown|mkd)$/i.test(file.name)) {
+                    // Markdown file icon
+                    icon = `<svg class="file-icon text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10"></path>
+                    </svg>`;
+                } else {
+                    icon = `<svg class="file-icon text-zinc-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
                     </svg>`;
+                }
+
+                // Check if file is markdown
+                const isMarkdown = !isDir && /\.(md|markdown|mdown|mkd)$/i.test(file.name);
+                
+                const viewBtn = isMarkdown
+                    ? `<button onclick="viewMarkdown('${file.path.replace(/'/g, "\\'")}'); event.stopPropagation();"
+                        class="px-3 py-1.5 rounded border border-zinc-700 hover:border-amber-500 text-zinc-400 hover:text-amber-400 text-xs font-medium transition-all bg-transparent flex items-center gap-2">
+                        <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+                        </svg>
+                        View
+                    </button>`
+                    : '';
 
                 const downloadBtn = isDir
                     ? ''
@@ -425,7 +448,8 @@
                     <td class="px-6 py-4 text-zinc-400 font-mono text-xs">${isDir ? '-' : formatSize(file.size)}</td>
                     <td class="px-6 py-4 text-zinc-500 text-xs">${formatTime(file.mtime)}</td>
                     <td class="px-6 py-4 text-right">
-                        <div class="file-actions flex justify-end">
+                        <div class="file-actions flex justify-end gap-2">
+                            ${viewBtn}
                             ${downloadBtn}
                         </div>
                     </td>
@@ -479,6 +503,12 @@
                 console.error('Failed to download file', e);
                 alert('Failed to download file: ' + e.message);
             }
+        }
+
+        // View markdown file
+        function viewMarkdown(path) {
+            const url = `/markdown_viewer?vm_id=${encodeURIComponent(vmId)}&path=${encodeURIComponent(path)}`;
+            window.open(url, '_blank', 'width=900,height=700,menubar=no,toolbar=no,location=no,status=no');
         }
 
         // Refresh files
