update: metadata for snapshots

--- a/bandsox/static/vm_details.html
+++ b/bandsox/static/vm_details.html
@@ -791,11 +791,11 @@
                 <!-- Add new entry form -->
                 <div class="flex gap-3 mb-4">
                     <input type="text" id="new-metadata-key" placeholder="Key"
-                        class="flex-1 bg-zinc-900 border border-zinc-700 rounded-lg px-3 py-2 text-zinc-300 text-sm focus:outline-none focus:border-emerald-500 focus:ring-1 focus:ring-emerald-500">
+                        class="flex-1 bg-zinc-900 border border-zinc-700 rounded-lg px-3 py-2 text-zinc-300 text-sm focus:outline-none focus:border-zinc-500 focus:ring-1 focus:ring-zinc-500">
                     <input type="text" id="new-metadata-value" placeholder="Value"
-                        class="flex-1 bg-zinc-900 border border-zinc-700 rounded-lg px-3 py-2 text-zinc-300 text-sm focus:outline-none focus:border-emerald-500 focus:ring-1 focus:ring-emerald-500">
+                        class="flex-1 bg-zinc-900 border border-zinc-700 rounded-lg px-3 py-2 text-zinc-300 text-sm focus:outline-none focus:border-zinc-500 focus:ring-1 focus:ring-zinc-500">
                     <button onclick="addMetadataEntry()"
-                        class="px-4 py-2 bg-emerald-600 hover:bg-emerald-500 text-white text-sm font-medium rounded transition-colors flex items-center gap-2">
+                        class="px-4 py-2 bg-white hover:bg-zinc-200 text-black text-sm font-medium rounded transition-colors flex items-center gap-2">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
                         </svg>
@@ -817,7 +817,7 @@
                     Cancel
                 </button>
                 <button id="save-metadata-btn" onclick="saveMetadata()"
-                    class="px-4 py-2 bg-emerald-600 hover:bg-emerald-500 text-white text-sm font-medium rounded transition-colors">
+                    class="px-4 py-2 bg-white hover:bg-zinc-200 text-black text-sm font-medium rounded transition-colors">
                     Save Metadata
                 </button>
             </div>
